# cpp-libhello

./: CMakeLists.txt  build.sh  readme.md  run.sh
cmake/: dependencies.cmake  functions.cmake  install.cmake  libhelloConfig.cmake.in  libhello_add_library.cmake  san.cmake
cmake/Hunter/: HunterGate.cmake  init.cmake
example/: CMakeLists.txt  main.cpp
include/libhello/: greet.hpp  libhello.hpp
src/: CMakeLists.txt  greet.cpp  hello.cpp  libhello.cpp  main.cpp
test/: CMakeLists.txt
test/libhello/: CMakeLists.txt  greet_test.cpp
